fix wierd overflow issue on android

--- a/src/components/atoms/ActionButton/ActionButton.scss
+++ b/src/components/atoms/ActionButton/ActionButton.scss
@@ -23,8 +23,7 @@
     }
 
     @media screen and (min-width: 800px) {
-        right: calc(50% - 192px);
-        top: 85dvh;
+        right: calc(50% - 428px);
         
     }
 }
